--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseURL: 'https://hugo-ladder.pages.dev'
-title: LADDER
+title: Vaibhav Upreti 
 theme: hugo-theme-ladder
 license: MIT
 licenselink: 'https://github.com/guangzhengli/hugo-theme-ladder/blob/master/LICENSE'
