--- a/config.yml
+++ b/config.yml
@@ -26,12 +26,12 @@ menu:
       url: https://umami-ochre-nu.vercel.app/share/R1lHz7QY/hugo-ladder-exampleSite
       weight: 5
 params:
-  brand: HOME
-  avatarURL: /images/avatar.png
-  author: Hugo Ladder
-  authorDescription: A clean, fast hugo theme focused on Reading
-  info: Ladder is a clean, simple but beautiful theme with awesome features
-  favicon: /images/avatar.png
+  brand: 🥑
+  avatarURL: /images/vu.png
+  author: Vaibhav Upreti
+  authorDescription: idk
+  info: Programmer | Developer
+  favicon: /images/avo.png
   options:
     showDarkMode: true
     enableImgZooming: true
@@ -74,31 +74,6 @@ params:
 languages:
   en:
     languageName: EN
-  zh:
-    languageName: 中
-    author: Ladder 主题
-    authorDescription: 一个美观，快速并且专注于阅读的主题
-    info: 帮助开发者构建一个免费并且漂亮的博客网站，记录自己的思考并且提高自己的影响力
-    guestbook:
-      title: 留言板
-      description: 您的评论，会让该网站更精彩！
-    menu:
-      main:
-        - name: 文章
-          url: /blog
-          weight: 1
-        - name: 分类
-          url: /tags
-          weight: 2
-        - name: 历史文章
-          url: /archives
-          weight: 3
-        - name: 留言板
-          url: /guestbook
-          weight: 4
-        - name: 网站统计
-          url: https://umami-ochre-nu.vercel.app/share/R1lHz7QY/hugo-ladder-exampleSite
-          weight: 5
 taxonomies:
   series: series
   tag: tags
