--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,12 @@
-baseURL: 'https://hugo-ladder.pages.dev'
+baseURL: 'https://vaibhavupreti.tech'
 title: Vaibhav Upreti 
 theme: hugo-theme-ladder
 license: MIT
-licenselink: 'https://github.com/guangzhengli/hugo-theme-ladder/blob/master/LICENSE'
+licenselink: 'https://github.com/'
 description: 'Blogs and content'
-homepage: 'https://hugo-ladder.pages.dev'
+homepage: 'https://vaibhavupreti.tech'
 defaultContentLanguage: 'en'
-googleAnalytics: G-4WXJ5TEK2S
+googleAnalytics: G-1ER2PWSRX3
 paginate: 10
 menu:
   main:
@@ -19,29 +19,32 @@ menu:
     - name: Archive
       url: /archives
       weight: 3
-    - name: Guestbook
-      url: /guestbook
+    - name: About
+      url: /about
       weight: 4
-    - name: Dashboard
-      url: https://umami-ochre-nu.vercel.app/share/R1lHz7QY/hugo-ladder-exampleSite
+    - name: Links
+      url: /links
       weight: 5
+    - name: Discuss
+      url: /discuss
+      weight: 6
 params:
   brand: 🥑
   avatarURL: /images/vu.png
   author: Vaibhav Upreti
-  authorDescription: idk
+  authorDescription: oxfords not brogues
   info: Programmer | Developer
   favicon: /images/avo.png
   options:
     showDarkMode: true
     enableImgZooming: true
-    enableMultiLang: true
+    enableMultiLang: false
   darkModeTheme: data-dark-mode
   #darkModeTheme: icy-dark-mode
   comments:
     giscus:
       enable: true
-      repo: guangzhengli/hugo-ladder-exampleSite
+      repo: VaibhavUpreti/ai
       repo_id: R_kgDOHyVOjg
       category: Announcements
       category_id: DIC_kwDOHyVOjs4CQsH7
@@ -50,27 +53,27 @@ params:
       lang: en # pick a language from https://github.com/giscus/giscus/tree/main/locales
     utteranc:
       enable: false
-      repo: guangzhengli/blog-comments
+      repo: VaibhavUpreti/ai
       issueTerm: pathname
   analytics:
     google:
-      SiteVerificationTag: xxx
-    umami:
-      enable: true
-      website_id: 2320eaa6-a90b-471c-b6ca-e79dadde8c4c
-      url: https://umami-ochre-nu.vercel.app/hugo-ladder.js
+      SiteVerificationTag: G-1ER2PWSRX3
+   #  umami:
+  #    enable: true
+   #   website_id: 2320eaa6-a90b-471c-b6ca-e79dadde8c4c
+   #   url: https://umami-ochre-nu.vercel.app/hugo-ladder.js
   guestbook:
-    title: Guestbook
-    description: Leave a comment below. It could be anything –- question, appreciation, information, or even humor.
+    title: 💬 Discussion
+    description: Start a discussion on github. Leave a comment below. It could be anything –- question, appreciation, information, or even humor.
   social:
     - name: GitHub
       pre: >-
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-      url: 'https://github.com/guangzhengli/hugo-theme-ladder'
-    - name: Dashboard
+      url: 'https://github.com/VaibhavUpreti'
+    - name: Twitter
       pre: >-
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-box"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
-      url: 'https://umami-ochre-nu.vercel.app/share/R1lHz7QY/hugo-ladder-exampleSite'
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9.0 01-3.14 1.53 4.48 4.48.0 00-7.86 3v1A10.66 10.66.0 013 4s-4 9 5 13a11.64 11.64.0 01-7 2c9 5 20 0 20-11.5a4.5 4.5.0 00-.08-.83A7.72 7.72.0 0023 3z"></path></svg>
+      url: 'https://twitter.com/vaibhav__upreti'
 languages:
   en:
     languageName: EN
