gsoc selection post

--- a/config.yml
+++ b/config.yml
@@ -32,7 +32,7 @@ params:
   brand: "🥑"
   avatarURL: /images/vu.png
   author: Vaibhav Upreti
-  authorDescription: oxfords not brogues
+  authorDescription: Oxfords not Brogues!
   info: Programmer | Developer
   favicon: /images/avo.png
   options:
