chore: fix baseUrl
Signed-off-by: VaibhavUpreti <vaibhav.upreti16@gmail.com>

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: 'https://vaibhavupreti.github.io/hugo-blog/'
+baseURL: 'https://vaibhavupreti.me'
 title: Vaibhav Upreti 
 theme: hugo-theme-ladder
 license: MIT
