--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL "https://vaibhavupreti.github.io/" #"${{ steps.pages.outputs.base_url }}/"
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
@@ -66,7 +66,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: "https://vaibhavupreti.github.io" #${{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
