--- a/config.yml
+++ b/config.yml
@@ -34,7 +34,7 @@ params:
   avatarURL: /images/vaibhav.png
   author: Vaibhav Upreti
   authorDescription: Oxfords not Brogues
-  info: Core Team, Infra, GSoC'23 @CircuitVerse.org 
+  info: Core Team, GSoC'23 @CircuitVerse.org 
   favicon: /images/avo.png
   options:
     showDarkMode: true
