--- a/config.yml
+++ b/config.yml
@@ -13,16 +13,16 @@ menu:
   main:
     - name: Blog
       url: /blog
-      weight: 1
-    - name: Tags
-      url: /tags
       weight: 2
+    # - name: Tags
+    #   url: /tags
+    #   weight: 3
     - name: Archive
       url: /archives
-      weight: 3
+      weight: 4
     - name: About
       url: /about
-      weight: 4
+      weight: 1
     - name: Links
       url: /links
       weight: 5
