feat: revamp home page
Signed-off-by: Vaibhav Upreti <vaibhavupreti@users.noreply.github.com>

--- a/config.yml
+++ b/config.yml
@@ -33,8 +33,8 @@ params:
   brand: "🥑"
   avatarURL: /images/vaibhav.png
   author: Vaibhav Upreti
-  authorDescription: Oxfords not Brogues
-  info: Core Team, GSoC'23 @CircuitVerse.org 
+  authorDescription: 2476 DEBA 5410 BF71 A8DF  0E27 1D5F CB0B 68EA 5B9E
+  info: Core Team, GSoC Mentor, GSoC'23 @CircuitVerse.org 
   favicon: /images/avo.png
   options:
     showDarkMode: false
